<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/statusFragment">

    <fragment
        android:id="@+id/statusFragment"
        android:name="com.example.notification_agent.ui.status.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.example.notification_agent.ui.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.notification_agent.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/notificationFiltersFragment"
        android:name="com.example.notification_agent.ui.NotificationFiltersFragment"
        android:label="@string/title_notification_filters"
        tools:layout="@layout/fragment_notification_filters" />

    <fragment
        android:id="@+id/smsFiltersFragment"
        android:name="com.example.notification_agent.ui.SmsFiltersFragment"
        android:label="@string/title_sms_filters"
        tools:layout="@layout/fragment_sms_filters" />
</navigation>